--- a/tennis/ToDo.txt
+++ b/tennis/ToDo.txt
@@ -1,29 +1,37 @@
 Todo-List:
 [X] Implement validation on the login form and registration form
-    [X] Contiune to work on the validation
+    Needs more work:
 [X] Save the information collected from the registration form
 [X] After a successfull login, the username should be printed somewhere in the menu. (Maybe replacing login button?)
 [X] If user is logged in, present an option to log out
-[X] Create a "User" class to make it possible to save multiple users 
-    [X] Implemented on username in the reg form. Needs to be implemented in the login form aswell and maybe for email too.
+[X] Create a "User" class to make it possible to save multiple users
 [X] Use the user class to check if the login information is correct. Otherwise display a message that says "Username 
     and password does not match".
 [X] Create a Booking class to store all the bookings.
+[X] Inform the user that he/she needs to login before bookings
+[X] Menuchoice to display the users bookings.
+[X] Add an alert when a booking is made
 
 VALIDATION TODOS:
 [X] Check if email already exists
 [X] Set appropriate min/max on court selection.
+[ ] Make it impossible to have a username with less than 4 characters.
+[ ] Make it impossible to have numbers and symbols in  first name and last name
+[ ] Make sure it is a valid email. The built in control accepts for example oscar@com, wich is not a valid email
 [X] Check if date has not passed
 [ ] Check if time has not passed
 
 
-[X] Inform the user that he/she needs to login before bookings
-[ ] Menuchoice to display the users bookings.
-[X] Add an alert when a booking is made
-[ ] Add a function to cancel a booking
+
+
+[ ] Add a function to cancel a booking (?) maybe 
 
 
 [ ] Fill the "content" divs with content
 
 
 [ ] Refactor and clean up the code
+
+
+
+
